{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 17,
  "lineage": "2ff8a512-d5d3-a774-49d8-dc40d69502d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dove-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:internet-gateway/igw-00c4e2a1abb363b0b",
            "id": "igw-00c4e2a1abb363b0b",
            "owner_id": "891377113883",
            "tags": {
              "Name": "dove-IGW"
            },
            "tags_all": {
              "Name": "dove-IGW"
            },
            "vpc_id": "vpc-0213bbcd375f66f60"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dove-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:route-table/rtb-01b3d9410446dcc51",
            "id": "rtb-01b3d9410446dcc51",
            "owner_id": "891377113883",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c4e2a1abb363b0b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dove-rt"
            },
            "tags_all": {
              "Name": "dove-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0213bbcd375f66f60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-rt-a-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019f2fb9358a95a55",
            "route_table_id": "rtb-01b3d9410446dcc51",
            "subnet_id": "subnet-0e7c4b5ab032af746"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-rt",
            "aws_subnet.dove-pub-1",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-rt-a-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065d5b1cc8a0d8799",
            "route_table_id": "rtb-01b3d9410446dcc51",
            "subnet_id": "subnet-0eeca299a855339b9"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-rt",
            "aws_subnet.dove-pub-2",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-rt-a-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfcdc3111869e1c8",
            "route_table_id": "rtb-01b3d9410446dcc51",
            "subnet_id": "subnet-0a8e3937e79b0fb40"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-rt",
            "aws_subnet.dove-pub-3",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dove-stack-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:security-group/sg-07f7b9243524868b3",
            "description": "Sec Grp for dove ssh",
            "egress": [],
            "id": "sg-07f7b9243524868b3",
            "ingress": [],
            "name": "vpr_stack_SG",
            "name_prefix": "",
            "owner_id": "891377113883",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dove-sg-tag"
            },
            "tags_all": {
              "Name": "dove-sg-tag"
            },
            "timeouts": null,
            "vpc_id": "vpc-0213bbcd375f66f60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:subnet/subnet-07108004b2ad0444e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07108004b2ad0444e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377113883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-priv-1"
            },
            "tags_all": {
              "Name": "dove-priv-1"
            },
            "vpc_id": "vpc-0213bbcd375f66f60"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:subnet/subnet-002032a69dbf1f4ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002032a69dbf1f4ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377113883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-priv-2"
            },
            "tags_all": {
              "Name": "dove-priv-2"
            },
            "vpc_id": "vpc-0213bbcd375f66f60"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:subnet/subnet-0df75de239a778e40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df75de239a778e40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377113883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-priv-3"
            },
            "tags_all": {
              "Name": "dove-priv-3"
            },
            "vpc_id": "vpc-0213bbcd375f66f60"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:subnet/subnet-0e7c4b5ab032af746",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7c4b5ab032af746",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377113883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-1"
            },
            "tags_all": {
              "Name": "dove-pub-1"
            },
            "vpc_id": "vpc-0213bbcd375f66f60"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:subnet/subnet-0eeca299a855339b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eeca299a855339b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377113883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-2"
            },
            "tags_all": {
              "Name": "dove-pub-2"
            },
            "vpc_id": "vpc-0213bbcd375f66f60"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:subnet/subnet-0a8e3937e79b0fb40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8e3937e79b0fb40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377113883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-3"
            },
            "tags_all": {
              "Name": "dove-pub-3"
            },
            "vpc_id": "vpc-0213bbcd375f66f60"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dove",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:vpc/vpc-0213bbcd375f66f60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04653b614c2b3915d",
            "default_route_table_id": "rtb-078f54ece36dcba08",
            "default_security_group_id": "sg-0572a637d62e439f1",
            "dhcp_options_id": "dopt-0204bf653f90dab3f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0213bbcd375f66f60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078f54ece36dcba08",
            "owner_id": "891377113883",
            "tags": {
              "Name": "vprofile"
            },
            "tags_all": {
              "Name": "vprofile"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "engress_dove",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:security-group-rule/sgr-0c50d1408ea2bffdb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c50d1408ea2bffdb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07f7b9243524868b3",
            "security_group_rule_id": "sgr-0c50d1408ea2bffdb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dove-stack-sg",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress_dove",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377113883:security-group-rule/sgr-020b1835ed0bcd614",
            "cidr_ipv4": "177.157.16.207/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-020b1835ed0bcd614",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-07f7b9243524868b3",
            "security_group_rule_id": "sgr-020b1835ed0bcd614",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dove-stack-sg",
            "aws_vpc.dove"
          ]
        }
      ]
    }
  ]
}